can search by color and animal type

--- a/PetFinder/PetFinder.csproj
+++ b/PetFinder/PetFinder.csproj
@@ -335,7 +335,7 @@
     <Content Include="Views\Role\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
