--- a/PetFinder/PetFinder.csproj
+++ b/PetFinder/PetFinder.csproj
@@ -218,6 +218,10 @@
     <Compile Include="Migrations\201802132152440_seeding.Designer.cs">
       <DependentUpon>201802132152440_seeding.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802141432216_seeding1.cs" />
+    <Compile Include="Migrations\201802141432216_seeding1.Designer.cs">
+      <DependentUpon>201802141432216_seeding1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AnimalType.cs" />
@@ -351,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802132152440_seeding.resx">
       <DependentUpon>201802132152440_seeding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802141432216_seeding1.resx">
+      <DependentUpon>201802141432216_seeding1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
