--- a/PetFinder/PetFinder.csproj
+++ b/PetFinder/PetFinder.csproj
@@ -240,6 +240,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\halftone.png" />
+    <Content Include="Content\Images\Paw.png" />
+    <Content Include="Content\Images\Paws.png" />
+    <Content Include="Content\navbar.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
