--- a/PetFinder/PetFinder.csproj
+++ b/PetFinder/PetFinder.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\201802141432216_seeding1.Designer.cs">
       <DependentUpon>201802141432216_seeding1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802141641142_updateImageProp.cs" />
+    <Compile Include="Migrations\201802141641142_updateImageProp.Designer.cs">
+      <DependentUpon>201802141641142_updateImageProp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AnimalType.cs" />
@@ -362,6 +366,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802141432216_seeding1.resx">
       <DependentUpon>201802141432216_seeding1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802141641142_updateImageProp.resx">
+      <DependentUpon>201802141641142_updateImageProp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
