--- a/PetFinder/PetFinder.csproj
+++ b/PetFinder/PetFinder.csproj
@@ -245,6 +245,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\halftone.png" />
+    <Content Include="Content\Images\lost.jpg" />
     <Content Include="Content\Images\Paw.png" />
     <Content Include="Content\Images\Paws.png" />
     <Content Include="Content\navbar.css" />
